# finarus

./: Cargo.toml  README.md
src/client/: auth_actions.rs  client.rs  client_actions.rs  enterprise_action.rs  inputtable.rs  main.rs  manager_actions.rs  menu.rs  operator_actions.rs  selector.rs  utils.rs
src/common/: account.rs  auth.rs  bank.rs  credit.rs  deposit.rs  mod.rs  salary.rs  time.rs  transaction.rs  user.rs  validate.rs
src/server/: account.rs  bank.rs  main.rs  runner.rs  server.rs  user.rs
src/server/services/: auth.rs  bank.rs  credit.rs  deposit.rs  mod.rs  salary.rs  storage.rs  time.rs
src/server/traits/: dynamic.rs  mod.rs  storable.rs  storage.rs
